--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-  dashboard works!
-</p>
+<div *ngIf="player">
+  <h2>{{player.name | uppercase}} Details</h2>
+  <div>
+    <span>ID: </span>{{player.id}}</div>
+  <div>
+    <span>ID: </span>{{player.name}}</div>
+  <app-daily-stats></app-daily-stats>
+</div>
