--- a/src/app/player-detail/player-detail.component.html
+++ b/src/app/player-detail/player-detail.component.html
@@ -8,5 +8,10 @@
       <input [(ngModel)]="player.name" placeholder="name">
     </label>
   </div>
+  <ul class="matches">
+    <li *ngFor="let match of matches">
+      <span class="badge">{{match.score}}</span>
+    </li>
+  </ul>
 
 </div>
