--- a/src/app/player-detail/player-detail.component.html
+++ b/src/app/player-detail/player-detail.component.html
@@ -1,12 +1,26 @@
 <div *ngIf="player">
 
-  <h2>{{player.name | uppercase}} Details</h2>
+  <h2>{{player.name | uppercase}}</h2>
   <div>
-    <span>ID: </span>{{player.id}}</div>
+    <span>ID: </span>{{player.id}}
+  </div>
   <div>
-    <label>Name:
-      <input [(ngModel)]="player.name" placeholder="name">
-    </label>
+    <span>Rank: </span>{{player.rank}}
+  </div>
+  <div>
+    <span>Grade section: </span>{{player.type}}
+  </div>
+  <div>
+    <span>Grade: </span>{{player.grade[0]}} - {{player.grade[1]}} {{(player.grade[1] == 1) ? 'win' : 'wins'}}
+  </div>
+  <div>
+    <span>Club: </span>{{player.club}}
+  </div>
+  <div>
+    <span>Association: </span>{{player.association}}
+  </div>
+  <div>
+    <svg class='line-chart'></svg>
   </div>
   <div>
     <mat-table [dataSource]="matches">
@@ -14,9 +28,21 @@
         <mat-header-cell *matHeaderCellDef> Opponent </mat-header-cell>
         <mat-cell *matCellDef="let match"> {{match.name}} </mat-cell>
       </ng-container>
+      <ng-container matColumnDef="opponentGrade">
+        <mat-header-cell *matHeaderCellDef> Opponent's grade </mat-header-cell>
+        <mat-cell *matCellDef="let match"> {{match.opponentGrade}} </mat-cell>
+      </ng-container>
       <ng-container matColumnDef="date">
         <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
         <mat-cell *matCellDef="let match"> {{match.date}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="score">
+        <mat-header-cell *matHeaderCellDef> Score</mat-header-cell>
+        <mat-cell *matCellDef="let match"> {{match.score}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="result">
+        <mat-header-cell *matHeaderCellDef> Result</mat-header-cell>
+        <mat-cell *matCellDef="let match"> {{match.result}} </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns" (click)="onRowClicked(row)"></mat-row>
