--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,9 +1,20 @@
 <h2>Players</h2>
 
-<ul class="players">
-  <li *ngFor="let player of players">
-    <a routerLink="/detail/{{player.id}}">
-      <span class="badge">{{player.id}}</span> {{player.name}} {{player.rank}}
-    </a>
-  </li>
-</ul>
+<div>
+  <mat-table [dataSource]="players">
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+      <mat-cell *matCellDef="let player"> <a routerLink="/detail/{{player.id}}">{{player.id}}</a></mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+      <mat-cell *matCellDef="let player"> {{player.name}} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="rank">
+      <mat-header-cell *matHeaderCellDef>Rank</mat-header-cell>
+      <mat-cell *matCellDef="let player"> {{player.rank}} </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+  </mat-table>
+</div>
